--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<title>E01</title>
 <!-- 1. Add a link to a stylesheet called "style.css" on the next line -->
 <link rel="stylesheet" href="style.css">
 <!-- 2.  Add a link to a script called "script.js" on the next line -->
@@ -21,7 +22,7 @@
     <!-- 4. Using the other form fields below as an example, create a new form field for a username. Give it a label also. -->
     <label for="username"><b>Username</b></label>
     <!-- 5. The name and ID of the input should be "username" -->
-    <input type="username" placeholder="Enter Username" name="username" id="username" required>
+    <input type="text" placeholder="Enter Username" name="username" id="username" required>
     
     <label for="email"><b>Email</b></label>
     <input type="text" placeholder="Enter Email" name="email" id="email" required>
